--- a/index.html
+++ b/index.html
@@ -9,37 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Desafio 7 - Dom</title>
     <style>
-        .div-backgroud{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .textLabel{
-            font-family: sans-serif;
-            font-weight: bolder;
-            font-size: 1rem;
-            margin-bottom: 8px;
-        }
-        .text{
-            font-size: 10px;
-            color: #716E6E;
-        }
-        .div-top label, .div-bot label{
-            width: 90%;
-            cursor: url(img/vertical.cur),default;
-        }
-        input{
-            cursor: url(img/vertical.cur),default;
-            background-color: #E8E6E6;
-            padding-bottom: 2vh;
-            width: 90%;
-            border: none;
-            font-size: 1.5rem;
-            outline: 0;
-        }
-        .corAzul{background-color: #2051FF;}
-        .corvermelho{background-color: #8A0000;}
-        .corPreto{background-color: #000000;}
+        
     </style>
 </head>
 
@@ -55,12 +25,12 @@
 
                 <div class="div-top text div-backgroud">
                     <label for="nomeUsuario">Nome de Usuário</label>
-                    <input id="nomeUsuario" type="text">
+                    <input id="nomeUsuario" type="text" maxlength="12">
                 </div>
 
                 <div class="div-bot text div-backgroud">
                     <label for="senha">Senha</label>
-                    <input id="senha" type="password">
+                    <input id="senha" type="password" maxlength="24">
                 </div>
 
                 <figure class="redeSociais">
@@ -72,7 +42,7 @@
                     <input id="checkbox" type="checkbox">
                     <label for="checkbox" class="textLabel">Manter login</label>                    
                 </div>
-                <button disabled class="btn btnColor2" onclick="autenticar()" ><img src="img/seta-direita.png" alt=""></button>
+                <button disabled class="btn btnColor2" onclick="autenticar()"><img src="img/seta-direita.png" alt=""></button>
                 <a href="#" class="text">Não consegue iniciar a sessão</a>
                 <a href="#" class="text">Criar conta</a>
                 
